# Twitter-Clone

./: .env.example  .gitignore  LICENSE  README.md  bun.lockb  data.json  next.config.js  package.json  pnpm-lock.yaml  react.d.ts  tailwind.config.ts  tsconfig.json
algorithms/trends/: Cargo.toml  README.md
algorithms/trends/src/: db.rs  handler.rs  main.rs  models.rs
algorithms/trends/src/entry/: filter_common_words.rs  generate.rs  mod.rs  prioritize_terms.rs  split_rows_offset.rs  trends.rs
drizzle/: 0000_gifted_zemo.sql  0002_mixed_vertigo.sql  0003_chief_james_howlett.sql  0005_dazzling_kang.sql  0006_striped_bulldozer.sql  0007_opposite_alex_power.sql  0008_majestic_joshua_kane.sql  0009_acoustic_sue_storm.sql  0015_warm_tombstone.sql  0016_flawless_scream.sql  0019_public_nomad.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0009_snapshot.json  0012_snapshot.json  0013_snapshot.json  0016_snapshot.json  0017_snapshot.json  0019_snapshot.json
mobile/: .metadata  analysis_options.yaml  pubspec.yaml
mobile/lib/: constants.dart  icons.dart  main.dart  routes.dart
mobile/scripts/: compile_svgs  generate_icon_file
server/: go.mod  go.sum  main.go
server/constants/: db.go  files.go  url.go
server/db/: file_storage.go  mongo.go  sql.go
server/env/: chat_db_url.go  cors_origin.go  db_url.go  gcp_keys_path.go  init.go  jwt.go  port.go
src/: middleware.ts
web/: README.md  bun.lockb  drizzle.config.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
(+409 files in other folders)
