[package]
name = "trends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
openssl = "0.10.62"
postgres-openssl = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
